# ms-feature-db-matcher

./: .gitignore  README.md  app.py  ms_feature_db_matcher.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
database/: datatables.xlsx  natural_modifications.xlsx
docs/plans/: 2026-03-13-ms-feature-db-matcher-design.md  2026-03-13-ms-feature-db-matcher.md
src/ms_feature_db_matcher/: __init__.py  column_rules.py  config.py  exporter.py  gui.py  io_utils.py  matcher.py  profiles.py
tests/: conftest.py  test_app_entry.py  test_end_to_end.py  test_exporter.py  test_gui_smoke.py  test_io_utils.py  test_matcher.py  test_profiles.py  test_smoke_project.py  test_workflows.py
